# synthetic_data_generator

./: .gitignore  Cargo.toml  LICENSE  README.md  build_releases.sh
generator/: BUILDING.md  Cargo.toml  TODO.md
generator/src/: main.rs
generator/src/args_helpers/: argument_helper.rs  help.rs  mod.rs
generator/src/data_exporters/: file_data_factory.rs  mod.rs  port_data_factory.rs
generator/src/data_helpers/: direct_data_factory.rs  mod.rs  output_helper.rs  string_values.rs
generator/src/data_helpers/live_data/: mod.rs
generator/src/utils/: log_builder.rs  mod.rs
generator/testing/: build_file_output_test.sh  build_port_output_test.sh  run_benchmark.sh  update_proc.sh  update_proc_kernel.sh  validate_json.py
generic_generator/: Cargo.toml
generic_generator/src/: main.rs
generic_generator/src/dynamic_data/: dynamic_data_json_loader.rs  mod.rs
generic_generator/test_files/: test_data_desc.json
synth_library/: Cargo.toml
synth_library/src/: lib.rs
synth_library/src/data_builders/: mod.rs
synth_library/src/data_builders/asn/: asn_factory.rs  mod.rs
synth_library/src/data_builders/datetime/: mod.rs  time_factory.rs
synth_library/src/data_builders/identifiers/: uuid_factory.rs
synth_library/src/data_builders/miscellaneous/: generic_string_list_factory.rs  mod.rs
synth_library/src/data_builders/network/: ip_factory.rs  mod.rs  port_factory.rs
synth_library/src/data_exporters/: file_io_helper.rs  mod.rs  port_streamer.rs
test_docs/: json_test_data.json  json_test_data_single.json  live_data.json
(+18 files in other folders)
